--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -2,11 +2,29 @@
 
 {% block content %}
 
-<form action="upload/" method="post" class="dropzone" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="fallback">
-        <input name="input_images" type="file" multiple />
+<div class="photo_box">
+  <div class="upload_btn">
+    <div class="upload">
+    	<input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn"><label for="photoBtn">사진 첨부하기</label>
     </div>
-</form>
+  	<a href="javascript:void(0);" id="resetPhoto">다시 올리기</a>
+  </div>
+  <div class="photo_them">
+    <div class="them_img">
+    	<img id="image" src="">
+    </div>
+  </div>
+  <a href="javascript:void(0);" id="complete">업로드</a>
+</div>
 
 {% endblock content %}
+
+<!--
+    <form action="upload/" method="post" class="dropzone" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="fallback">
+        <input class="image_box" name="input_image" type="file" multiple />
+    </div>
+    <input type='submit' value="이미지 보호" class="btn" />
+    </form>
+-->
