--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-    color: black !important;
+    color: #fff !important;
     text-decoration: none !important;
 }
 
@@ -14,6 +14,7 @@ a {
     justify-content: center;
     list-style-type: none;
     border-bottom: 1px solid #ccc;
+    background-color: royalblue;
     margin: 0;
     padding: 20px 0;
 }
@@ -25,51 +26,82 @@ a {
     font-weight: 700;
 }
 
-.dropzone {
+/* cropper */
+
+input, label {
+    cursor: pointer !important;
+    width: 100%;
+    padding: 15px 0;
+    text-align: center;
+}
+
+.photo_box{
     margin: 20px auto;
-    padding: 40px 0;
-    background-color: #f8f8f8 !important;
-    border: 2px dashed #ccc !important;
-    border-radius: 5px !important;
-    width: 80%;
-    display: flex !important;
+    max-width: 500px;
+}
+
+.upload_btn{
+    overflow: hidden;
+    width: 100%;
+}
+
+.upload_btn #photoBtn{
+    display: none;
+}
+
+.upload_btn .upload{
+    background-color: royalblue;
+    text-decoration: none;
+    color: #fff;
+
+    cursor: pointer !important;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
-.dropzone:hover {
-    background-color: aliceblue !important;
+.upload:hover{
+    background-color: steelblue;
 }
 
-.fallback {
-    margin: 5px;
-    padding: 5px;
+.photo_them{
+    position: relative;
+    margin-top: 20px;
+    width: 100%;
+    height: 250px;
+    background: #eee;
 }
 
-.image_box {
-
+.them_img, .result_box{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.btn {
-    width: 240px !important;
-    height: 80px !important;
-    background-color: cornflowerblue !important;
-    border: none !important;
-    border-radius: 5px !important;
-    margin: 5px !important;
+.result_box{
+    background: #fff;
 }
 
-/* cropper */
+.them_img img, .result_box img{
+    display: block;
+    margin: 0 auto;
+    height: 100%;
+}
 
-.photo_box{margin:20px auto ;max-width:500px;} 
-.upload_btn{overflow:hidden;width:100%;}
-.upload_btn #photoBtn{display:none;}
-.upload_btn .upload, .upload_btn a{float:left;width:calc(50% - 10px);text-align:center;text-decoration: none;color:#fff;padding:15px 0;}
-.upload_btn .upload{background-color:steelblue;} 
-.upload_btn a{margin-left:20px; background:#ccc;}
-.photo_them{position:relative;margin-top:20px;width:100%;height:250px;background:#eee;}
-.them_img, .result_box{position:absolute;top:0;left:0;width:100%;height:100%;}
-.result_box{background:#fff;}
-.them_img img, .result_box img{display:block;margin:0 auto;height:100%;}
-#complete{display:block;margin-top:20px;padding:15px 0;width:100%;text-align:center;color:#fff;text-decoration: none;background-color: steelblue;}
+#complete{
+    display: block;
+    margin-top: 20px;
+    padding: 15px 0;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    background-color: royalblue;
+}
+
+#complete:hover{
+    background-color: steelblue;
+}
