HH-Android Crob Image UI & API 구현(Test 전)

--- a/Android/app/src/main/res/layout/main_fragment.xml
+++ b/Android/app/src/main/res/layout/main_fragment.xml
@@ -40,6 +40,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -47,7 +48,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/camera_btn"
-        tools:ignore="MissingConstraints" />
+        />
+
+    <com.theartofdev.edmodo.cropper.CropImageView
+        android:id="@+id/cropImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        tools:ignore="MissingConstraints"
+        />
 
     <Button
         android:id="@+id/trans"
