--- a/api/templates/output.html
+++ b/api/templates/output.html
@@ -1,7 +1,7 @@
-{% extends 'index.html' %}
+<!-- {% extends 'index.html' %}
 
 {% block content %}
 
 <p>Hello, World!</p>
 
-{% endblock content %}
+{% endblock content %} -->
