--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -59,6 +59,7 @@ input, label {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 50px;
 }
 
 .upload:hover{
@@ -91,10 +92,14 @@ input, label {
     height: 100%;
 }
 
+
+
 #complete{
     display: block;
     margin-top: 20px;
-    padding: 15px 0;
+    /* padding: 15px 0; */
+    height: 50px;
+    line-height: 50px;
     width: 100%;
     text-align: center;
     color: #fff;
@@ -104,4 +109,28 @@ input, label {
 
 #complete:hover{
     background-color: steelblue;
+}
+
+/*loader*/
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:100);
+
+
+#loading {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid rgba(255,255,255,.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  margin-top: 10px;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
 }
