--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load bootstrap4 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,12 +16,17 @@
     <link rel="stylesheet" type="text/css" href="https://fengyuanchen.github.io/cropperjs/css/cropper.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://fengyuanchen.github.io/cropper/js/cropper.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    {# Load CSS and JavaScript #}
+    {% bootstrap_css %}
+    {% bootstrap_javascript jquery='full' %}
 </head>
 <body>
-    <ul class = 'nav'>
-        <li class= 'nav-item'><a href="{% url 'web-main' %}">DeepfakeBlock</a></li>
-        <li class= 'nav-item'>Documentation</li>
-    </ul>
+    <nav class="navbar navbar-light" style="background-color: royalblue;">
+        <a class="nav-link active" href="{% url 'web-main' %}" style="color: white"><h4 style="font-weight: bold">DeepfakeBlock</h4></a>
+        <a class="nav-link" href="https://github.com/cheonlian/DeepfakeBlock"><i class="fab fa-github 5x fa-2x"></i></a>
+    </nav>
     {% block content %}
     {% endblock content %}
     <script src="{% static 'js/crop.js' %}"></script>
