--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -1,21 +1,32 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
-<div class="photo_box">
-  <div class="upload_btn">
-    <div class="upload">
-    	<input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn"><label for="photoBtn">사진 첨부하기</label>
+{% comment %} <div class="photo_box"> {% endcomment %}
+<div class="">
+  <div class="d-flex mt-3">
+    <div class="upload_btn col-9">
+      <div class="upload">
+        <input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn"><label for="photoBtn">사진 첨부하기</label>
+      </div>
+      <div class="photo_them" style="text-align: center; line-height: 250px; color: rgb(122, 122, 122);">
+        <b style="font-size: 20px"> drag & drop image</b>
+        <div class="them_img">
+          <img id="image" src="">
+        </div>
+      </div>
+      <div class="d-flex">
+        <input type="range" name="noise" id="noise" min="1" max="5" step="1">
+        <button class="btn btn-light m-3" style="width: 100px; background-color: royalblue; color: white">업로드</button>
+      </div>
+    </div>
+    <div class="col-3">
+      <h4 style="text-align: center; font-weight: bold">Option</h4>
+      <div>sample image</div>
+      <div>sample attack rate</div>
+      <a href="javascript:void(0);" id="complete">업로드</a>
     </div>
   </div>
-  <div class="photo_them" style="text-align: center; line-height: 250px; color: rgb(122, 122, 122);">
-    <h3> drag & drop image</h3>
-    <div class="them_img">
-    	<img id="image" src="">
-      
-    </div>
-  </div>
-  <a href="javascript:void(0);" id="complete">업로드</a>
 </div>
 
 {% endblock content %}
