--- a/Android/app/src/main/res/layout/main_fragment.xml
+++ b/Android/app/src/main/res/layout/main_fragment.xml
@@ -1,21 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.main.MainFragment">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vision"
+        android:text="@string/Title"
         android:layout_marginTop="10pt"
+        android:textSize="11pt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/previewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/vision"
+        android:textSize="8pt"
+        android:layout_marginTop="3pt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <ImageView
+        android:id="@+id/preview"
+        android:layout_width="100pt"
+        android:layout_height="75pt"
+        android:layout_marginTop="5pt"
+        app:layout_constraintStart_toStartOf="@id/previewTitle"
+        app:layout_constraintEnd_toEndOf="@id/previewTitle"
+        app:layout_constraintTop_toBottomOf="@id/previewTitle"
+        />
+
+    <TextView
+        android:id="@+id/seekbarTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/seekbarTitle"
+        android:layout_marginTop="2pt"
+        android:textSize="8pt"
+        app:layout_constraintLeft_toLeftOf="@id/noisePercent"
+        app:layout_constraintRight_toRightOf="@id/noisePercent"
+        app:layout_constraintTop_toBottomOf="@id/preview"
+        />
+    <SeekBar
+        android:id="@+id/noisePercent"
+        android:layout_width="75pt"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/seekbarTitle"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintLeft_toLeftOf="@id/preview"
+        app:layout_constraintRight_toRightOf="@id/preview"
+        android:max="5"
+        android:progress="1"/>
 
     <Button
         android:id="@+id/camera_btn"
@@ -23,10 +70,9 @@
         android:layout_height="wrap_content"
         android:text="@string/btn1"
         android:layout_marginEnd="50pt"
-        android:layout_marginTop="50pt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/noisePercent"
         />
 
     <Button
@@ -34,15 +80,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn2"
-        android:layout_marginStart="50pt"
-        android:layout_marginTop="50pt"
+        android:layout_marginLeft="50pt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/noisePercent"
+        />
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/targetImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,21 +96,15 @@
         app:layout_constraintTop_toBottomOf="@id/camera_btn"
         />
 
-    <com.theartofdev.edmodo.cropper.CropImageView
-        android:id="@+id/cropImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        tools:ignore="MissingConstraints"
-        />
-
     <Button
         android:id="@+id/trans"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/message"
-        app:layout_constraintEnd_toEndOf="@+id/message"/>
+        app:layout_constraintTop_toBottomOf="@+id/targetImageView"
+        app:layout_constraintStart_toStartOf="@+id/previewTitle"
+        app:layout_constraintEnd_toEndOf="@+id/previewTitle"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
