--- a/api/static/css/style1.css
+++ b/api/static/css/style1.css
@@ -58,7 +58,7 @@ input, label {
 
 .photo_them{
     position: relative;
-    margin-top: 20px;
+    margin: 20px 0;    
     width: 100%;
     height: 100%;
     background: #eee;
@@ -87,10 +87,12 @@ input, label {
 .them_img img, .result_box img{
     display: block;
     margin: 0 auto;
-    height: 100%;
 }
 
-
+.btn-group {
+    bottom: 10px;
+    display: none;
+}
 
 #complete{
     display: block;
