--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -3,20 +3,35 @@
 {% block content %}
 
 <div class="">
-  <div class="d-flex mt-3">
-    <div class="upload_btn col-9 align-items-center" style="display: flex; flex-direction: column">
+  <div class="mt-3 d-flex justify-content-between">
+    <div class="upload_btn align-items-center" style="width: 100%; margin: 10px; display: flex; flex-direction: column">
       <div class="upload" style="width: 200px">
-        <input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn"><label for="photoBtn">사진 첨부하기</label>
+        <input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn"><label
+          for="photoBtn">사진 첨부하기</label>
       </div>
-      <div class="photo_them" style="text-align: center; line-height: 84vh; color: rgb(122, 122, 122);">
-        <b style="font-size: 20px"> drag & drop image</b>
+      <div class="photo_them" style="line-height: 82vh; text-align: center; color: rgb(122, 122, 122);">
+        <div style="margin: auto; font-size: 20px; font-weight: bold;"> drag & drop image</div>
         <div class="them_img">
           <img id="image" src="">
         </div>
+        <div class="btn-group" id="btn-group">
+          <button id="ZoomInBtn" type="button" class="btn btn-primary" data-method="zoom" data-option="0.1"
+            title="Zoom In">
+            <span class="docs-tooltip" data-toggle="tooltip" title="cropper.zoom(0.1)">
+              <span class="fa fa-search-plus">+</span>
+            </span>
+          </button>
+          <button id="ZoomOutBtn" type="button" class="btn btn-primary" data-method="zoom" data-option="-0.1"
+            title="Zoom Out">
+            <span class="docs-tooltip" data-toggle="tooltip" title="cropper.zoom(-0.1)">
+              <span class="fa fa-search-minus">-</span>
+            </span>
+          </button>
+        </div>
       </div>
     </div>
-    <div class="col-3">
-      <h4 style="text-align: center; font-weight: bold">Option</h4>
+    <div style="width: 500px; margin: 10px;">
+      <h4 style="margin: 21px; text-align: center; font-weight: bold">Option</h4>
       <div class="sample_them">
         sample image
       </div>
