--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -12,7 +12,7 @@
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style1.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- cropper.js -->
