--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -6,8 +6,8 @@
   <div class="mt-3 d-flex justify-content-end">
     <div class="upload_btn align-items-center flex-fill" style="margin: 10px; display: flex; flex-direction: column">
       <div class="upload" style="width: 200px">
-        <input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn"><label
-          for="photoBtn">사진 첨부하기</label>
+        <input type="file" name="photoBtn" accept="image/jpeg, image/png" capture="camera" id="photoBtn">
+        <label for="photoBtn">사진 첨부하기</label>
       </div>
       <div class="photo_them" style="line-height: 78vh; text-align: center; color: rgb(122, 122, 122);">
         <div style="margin: auto; font-size: 20px; font-weight: bold;"> drag & drop image</div>
@@ -33,12 +33,15 @@
     <div style="width: 500px; margin: 10px;">
       <h4 style="margin: 21px; text-align: center; font-weight: bold">Option</h4>
       <div class="sample_them">
-        sample image
+        <img id="example" src="media/noise_example/3.png" height="250px">
       </div>
       <div class="d-flex">
-        <input type="range" name="noise" id="noise" min="1" max="5" step="1">
+        <input type="range" name="noise" id="noise" min="1" max="5" step="1" onchange="setNoise()">
       </div>
-      <a href="javascript:void(0);" id="complete">업로드</a>
+      <div style="text-align: center;">
+      <a href="javascript:void(0);" class="buttons" id = "upload">변환</a>
+      <a href="javascript:void(0);" class="buttons" id = "download">다운로드</a>
+      </div>
     </div>
   </div>
 </div>
