add detecting option

--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -42,6 +42,13 @@
       <a href="javascript:void(0);" class="buttons" id = "upload">변환</a>
       <a href="javascript:void(0);" class="buttons" id = "download">다운로드</a>
       </div>
+      <div style="text-align: center; margin-top: 30px;">
+        <div>Detect</div>
+        <label class="switch" style="text-align: center;">
+          <input type="checkbox" id = "toggle" onclick="clickToggle()">
+          <span class="slider round"></span>
+        </label>
+      </div>
     </div>
   </div>
 </div>
