add setDragMode btn

--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -16,6 +16,16 @@
         </div>
       </div>
         <div class="btn-group" id="btn-group">
+          <button id="dragModeBtn" type="button" class="btn btn-primary" data-method="setDragMode" data-option="move" title="Move">
+            <span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;setDragMode&quot;, &quot;move&quot;)">
+              <span class="fa fa-arrows-alt"></span>
+            </span>
+          </button>
+          <button id="cropModeBtn" type="button" class="btn btn-primary" data-method="setDragMode" data-option="crop" title="Crop">
+            <span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;setDragMode&quot;, &quot;crop&quot;)">
+              <span class="fa fa-crop-alt"></span>
+            </span>
+          </button>
           <button id="ZoomInBtn" type="button" class="btn" data-method="zoom" data-option="0.1"
             title="Zoom In" style="background-color: royalblue; color: #fff">
             <span class="docs-tooltip" data-toggle="tooltip" title="cropper.zoom(0.1)">
