HH - Android create Boxpreview & Change Template & Change Server URL to AWS

--- a/Android/app/src/main/res/layout-v26/main_fragment.xml
+++ b/Android/app/src/main/res/layout-v26/main_fragment.xml
@@ -42,6 +42,26 @@
         app:layout_constraintTop_toBottomOf="@id/previewTitle"
         />
 
+    <ImageView
+        android:id="@+id/previewnotTrans"
+        android:layout_width="75pt"
+        android:layout_height="75pt"
+        android:layout_marginTop="5pt"
+        android:layout_marginStart="5pt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/previewTitle"
+        />
+
+    <ImageView
+        android:id="@+id/previewTrans"
+        android:layout_width="75pt"
+        android:layout_height="75pt"
+        android:layout_marginTop="5pt"
+        android:layout_marginEnd="5pt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/previewTitle"
+        />
+
     <TextView
         android:id="@+id/seekbarTitle"
         android:layout_width="wrap_content"
@@ -63,7 +83,7 @@
         app:layout_constraintRight_toRightOf="@id/preview"
         android:min="1"
         android:max="5"
-        android:progress="1"/>
+        android:progress="3"/>
 
     <Button
         android:id="@+id/camera_btn"
@@ -103,8 +123,33 @@
         android:layout_height="wrap_content"
         android:text="@string/btn3"
         app:layout_constraintTop_toBottomOf="@+id/targetImageView"
-        app:layout_constraintStart_toStartOf="@+id/previewTitle"
-        app:layout_constraintEnd_toEndOf="@+id/previewTitle"/>
+        app:layout_constraintStart_toStartOf="@+id/camera_btn"
+        app:layout_constraintEnd_toEndOf="@+id/camera_btn"
+        android:visibility="invisible"
+        />
+
+
+    <Button
+        android:id="@+id/boxpreview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="얼굴 찾기"
+        app:layout_constraintTop_toBottomOf="@+id/targetImageView"
+        app:layout_constraintStart_toStartOf="@+id/gallery_btn"
+        app:layout_constraintEnd_toEndOf="@+id/gallery_btn"
+        android:visibility="invisible"
+        />
+
+    <ImageView
+        android:id="@+id/tempSaveImage"
+        android:layout_width="100pt"
+        android:layout_height="75pt"
+        android:layout_marginTop="5pt"
+        app:layout_constraintStart_toStartOf="@id/targetImageView"
+        app:layout_constraintEnd_toEndOf="@id/targetImageView"
+        app:layout_constraintTop_toBottomOf="@id/targetImageView"
+        android:visibility="invisible"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
